tests/snapshots/view_snapshots__wrap_mode_global_nowrap.snap
---
source: tests/view_snapshots.rs
expression: output
---
┌Main Agent (1 entries) ▶──────────────────────────────────┐
│This is a very long line that definitely exceeds the viewp│
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
