tests/snapshots/view_snapshots__wrap_mode_global_wrap.snap
---
source: tests/view_snapshots.rs
expression: output
---
┌Main Agent (1 entries) ▶──────────────────────────────────┐
││   1 This is a very long line that definitely exceeds the│
││     ort width and should wrap to multiple lines when wra│
││     is enabled. The content should continue on the next │
││     without truncation.                                 │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
