tests/snapshots/view_snapshots__wrap_mode_per_entry_override.snap
---
source: tests/view_snapshots.rs
expression: output
---
┌Main Agent (1 entries) ▶──────────────────────────────────┐
││   1 This is a very long line that definitely exceeds the│
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
